--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "easy-pie-chart": "^2.1.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "swiper": "^4.3.5"
